--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <li>Gmail</li>
     </ul>
   <div class="logo">
-    <img src="https://www.google.com/logos/doodles/2018/anandi-gopal-joshis-153rd-birthday-6701627435122688.2-l.png" alt="Google Logo">
+    <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google Logo">
   </div>
   <div class="search">
     <input type="text">
@@ -23,6 +23,17 @@
     <button type="button">I'm Feeling Lucky</button>
   </div>
   <footer>
+    <p id="country">Slovenia</p>
+    <ul id="bottom">
+      <li>Advertising</li>
+      <li>Business</li>
+      <li>About</li>
+      <div class="right">
+      <li>Privacy</li>
+      <li>Terms</li>
+      <li>Settings</li>
+    </div>
+    </ul>
   </footer>
   </body>
 </html>
